Jupyter notebook modified

--- a/cs101_project/jupyter_notebook.ipynb
+++ b/cs101_project/jupyter_notebook.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "residential-monthly",
+   "execution_count": 1,
+   "id": "immediate-period",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "chinese-thesis",
+   "execution_count": 2,
+   "id": "functioning-hours",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,112 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sought-franchise",
+   "id": "occupational-status",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please,enter the directory where your images are stored\n",
+      "...or enter the word test to analize test images included \n",
+      "\n",
+      "path example: '/path/to/'\n",
+      "\tFor quitting the program enter quit.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Directory where your images are stored or enter word test:  test\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Images available: \n",
+      "\t> bird.png\n",
+      "\t> squares.png\n",
+      "\t> cr_rainforest.jpg\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Which image do you want to analize?:  cr_rainforest.jpg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "> Your image has 99097 different colors\n",
+      "\n",
+      "\n",
+      "Do you want to reduce the colors of your image:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "yes or no:  yes\n",
+      "How many colors do you want to display:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Do you want to save your new image:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "yes or no:  yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tPlease specify where the image should be saved\n",
+      "\tPath example: '/path/to/save'\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Path:  /home/ecamo19/Documents/cursos_libros_tutoriales/cursos/codeacademy/codecademy_projects/cs101_project/test_images\n",
+      "\n",
+      "Image name:  test\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "> Image saved!\n",
+      "\n",
+      "\tBye!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nPlease,enter the directory where your images are stored\")\n",
     "print(\"...or enter the word test to analize test images included \")\n",
@@ -58,71 +161,73 @@
     "    \n",
     "    for each_image in os.listdir(path_to_image):\n",
     "   \n",
-    "        if each_image.endswith(\".jpeg\") or each_image.endswith(\".jpg\"):        \n",
-    "                print(f'\\t> {os.path.basename(each_image)}')\n",
-    "                \n",
-    "        image_name = input('\\nWhich image do you want to analize?: ')\n",
+    "        if each_image.endswith('png') or each_image.endswith('jpg'):        \n",
+    "            print(f'\\t> {os.path.basename(each_image)}')\n",
+    "            \n",
+    "    # Choose image -------------------------------------------------------------------\n",
+    "    image_name = input('\\nWhich image do you want to analize?: ')\n",
+    "    if image_name == \"quit\":\n",
+    "        flag = False\n",
+    "        print(\"\\n\\tBye!\\n\")\n",
+    "        break  \n",
     "        \n",
-    "        if image_name == \"quit\":\n",
-    "            flag = False\n",
-    "            print(\"\\n\\tBye!\\n\")\n",
-    "            break  \n",
-    "        else:\n",
-    "            # Read images using PIL -------------------------------------------------\n",
-    "            # Read image PIL, here the image is not an array\n",
-    "            image = Image.open(f'{path_to_image}/{image_name}') \n",
+    "    else:\n",
+    "        # Read images using PIL -------------------------------------------------\n",
+    "        # Read image PIL, here the image is not an array\n",
+    "        image = Image.open(f'{path_to_image}/{image_name}') \n",
     "        \n",
-    "            # Image for kmeans, convert image to array\n",
-    "            img_kmeans = np.array(image)\n",
+    "        # Image for kmeans, convert image to array\n",
+    "        img_kmeans = np.array(image)\n",
     "        \n",
-    "            # Count colors function ---------------------------------------------------------\n",
+    "        # Count colors function ---------------------------------------------------------\n",
     "        \n",
-    "            count_colors(image)\n",
+    "        count_colors(image)\n",
     "       \n",
-    "            # Reduce colors -----------------------------------------------------------------\n",
-    "            print(\"\\nDo you want to reduce the colors of your image:\")\n",
-    "            quantization = input(\"yes or no: \")\n",
+    "        # Reduce colors -----------------------------------------------------------------\n",
+    "        print(\"\\nDo you want to reduce the colors of your image:\")\n",
+    "        quantization = input(\"yes or no: \")\n",
     "        \n",
-    "            if quantization != \"yes\":\n",
-    "                \n",
+    "        if quantization != \"yes\":\n",
     "                flag = False\n",
     "                print(\"\\n\\tBye!\\n\")\n",
     "                break \n",
     "           \n",
-    "            else:\n",
+    "        else:\n",
     "            \n",
-    "                number_of_colors = int(input(\"How many colors do you want to display: \"))\n",
-    "                clustered_image = reduce_colors(img_kmeans, number_of_colors = number_of_colors)\n",
+    "            # Color reduction\n",
+    "            number_of_colors = int(input(\"How many colors do you want to display: \"))\n",
+    "            clustered_image = reduce_colors(img_kmeans, number_of_colors = number_of_colors)\n",
     "        \n",
-    "                # Concatanate images horizontally\n",
-    "                horizontal_images = np.concatenate((image, clustered_image), axis=1)\n",
+    "            # Concatanate images horizontally\n",
+    "            horizontal_images = np.concatenate((image, clustered_image), axis=1)\n",
     "            \n",
-    "                cv2.imshow('comparition', cv2.cvtColor(horizontal_images, cv2.COLOR_RGB2BGR))\n",
-    "                cv2.waitKey(0)\n",
+    "            cv2.imshow('comparition', cv2.cvtColor(horizontal_images, cv2.COLOR_RGB2BGR))\n",
+    "            cv2.waitKey(0)\n",
     "            \n",
-    "                print(\"\\nDo you want to save your new image:\")\n",
-    "                save_image = input(\"yes or no: \")\n",
+    "            print(\"\\nDo you want to save your new image:\")\n",
+    "            save_image = input(\"yes or no: \")\n",
     "            \n",
-    "                if save_image == \"no\":\n",
-    "                    continue\n",
+    "            if save_image == \"no\":\n",
+    "                continue\n",
     "\n",
-    "                elif save_image == \"yes\":\n",
-    "                    print(\"\\tPlease specify where the image should be saved\")\n",
-    "                    print(\"\\tPath example: '/path/to/save'\")\n",
-    "                    path_to_save = input(\"\\nPath: \")\n",
-    "                    image_name = input(\"\\nImage name: \")\n",
-    "                    cv2.imwrite(f'{path_to_save}/{image_name}.jpg',cv2.cvtColor(clustered_image, cv2.COLOR_RGB2BGR))\n",
-    "                    cv2.waitKey(0)\n",
-    "                    print(\"\\n> Image saved!\")\n",
-    "                    flag = False\n",
-    "                    print(\"\\n\\tBye!\\n\")\n",
+    "            elif save_image == \"yes\":\n",
+    "                print(\"\\tPlease specify where the image should be saved\")\n",
+    "                print(\"\\tPath example: '/path/to/save'\")\n",
+    "                path_to_save = input(\"\\nPath: \")\n",
+    "                image_name = input(\"\\nImage name: \")\n",
+    "                cv2.imwrite(f'{path_to_save}/{image_name}.jpg',cv2.cvtColor(clustered_image, cv2.COLOR_RGB2BGR))\n",
+    "                cv2.waitKey(0)\n",
+    "                print(\"\\n> Image saved!\")\n",
+    "                flag = False\n",
+    "                print(\"\\n\\tBye!\\n\")\n",
+    "                break \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "north-present",
+   "id": "federal-sport",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -130,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unable-planner",
+   "id": "small-infection",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -138,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pressed-lithuania",
+   "id": "potential-transcript",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "musical-morning",
+   "id": "structural-republic",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -154,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wireless-allergy",
+   "id": "narrow-upper",
    "metadata": {},
    "outputs": [],
    "source": []
